--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,27 +3,30 @@
 <body>
   <div class="container">
 
-  <% if(! (typeof(error) === "undefined") ) { %>
+<% if(! (typeof(error) === "undefined") ) { %>
     <h3> <%= error %>. </h3>
-  <% } %>
+<% } %>
 
-    <% if(!(typeof(user) === "undefined")) { %>
+<% if(!(typeof(user) === "undefined")) { %>
       <p>Welcome <%= user.username %><br>
-      <% if(user.college) { %>
+<% if(user.college) { %>
           You are from <%= user.college %> and pursuing <%= user.degree %>.
-      <% } %>
+<% } %>
       </p>
-    <a href="/Logout"> Logout </a>
+    <a href="#/"> Home </a> |
+    <a href="#/about"> About </a> |
+    <a href="/Logout"> Logout </a> |
 
     <div ng-controller="MyCtrl"
-      <% if(user.completedProfile == true) { %>
+<% if(user.completedProfile == true) { %>
         class="ng-hide"
-      <% } %>
+<% } %>
     >
       <div class="main" id="shouldHide">
         <form action="/profile" method="post">
           <autocomplete ng-model="resultC" attr-placeholder="type to search colleges..." click-activation="true" data="colleges"></autocomplete>
           <autocomplete ng-model="resultD" attr-placeholder="type to search degrees..." click-activation="true" data="degrees"></autocomplete>
+          <!-- Hack to send form data since autocomplete dosen't support it -->
           <input type="text" name="college" ng-model="resultC" class="hide">
           <input type="text" name="degree" ng-model="resultD" class="hide">
           <button type="submit">Update</button>
@@ -32,7 +35,14 @@
       </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
+    <div ng-view
+    <% if(user.completedProfile == false) { %>
+      class="ng-hide"
+    <% } %>
+    ></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.6/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.6/angular-route.min.js"></script>
     <script type="text/javascript" src="scripts/autocomplete.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
     <script type="text/javascript">
