--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,7 +43,6 @@ h3 {
   padding: 5px 10px;
 }
 
-
 a {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
@@ -71,6 +70,7 @@ input {
   margin: 5px 0;
   color: #eee;
   font-size: 1rem;
+  z-index: 2;
 }
 
 button {
@@ -83,59 +83,41 @@ button {
   font-size: 0.9rem;
 }
 
-.autocomplete {
-  width: 100%;
-  position: relative;
-}
-
-.autocomplete input {
-  width: 100%;
-  padding: 0.7rem;
-}
-
-.autocomplete ul {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  border: 2px solid #111;
-  background-color: #fff;
-  z-index: 1;
-  color: #222;
-}
-
-.autocomplete li {
-  list-style: none;
-  width: 100%;
-  padding: 0.4em;
-  background-color: #fff;
-}
-
-.autocomplete li.active {
-  width: 100%;
-  background-color: #4bf;
-  cursor: pointer;
-}
-
-.autocomplete .highlight {
-  background-color: #E2E2E2;
-}
-
-.autocomplete li.active .highlight {
-  background: #666;
-  color: #000;
-}
-
-.main{
+.main {
   border: 2px solid #222;
   padding: 10px;
   margin: 10px auto;
-  box-shadow: 3px 2px 4px 0 rgba(1,1,1,0.5);
+  box-shadow: 3px 2px 4px 0 rgba(1, 1, 1, 0.5);
+  position: relative;
+  z-index:1;
 }
 
-.hide{
+.hide {
   display: none;
 }
 
-button{
+button {
   cursor: pointer;
+}
+
+.autoCmplBox {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  z-index: 2;
+}
+
+.suggestions-list {
+  background: #fff;
+  color: #222;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+  width: 100%;
+  z-index: 3;
+}
+
+.suggestions-list li{
+  padding: 5px;
 }
